# Near-intents

./: archive.tsx  package.json  pnpm-lock.yaml
hello/: Cargo.toml  README.md  deploy.sh  optimize.sh
hello/src/: lib.rs
src/components/: GlobalHeader.tsx  Layout.tsx  MouseIcon.tsx  PersonaCard.tsx  ThemeToggle.tsx
src/contexts/: ThemeContext.tsx
src/pages/: [section].tsx  _app.tsx  _document.tsx  index.tsx
src/pages/persona/: ai-agent.tsx  auditor.tsx  contract-integrator.tsx  market-maker.tsx  wallet-dev.tsx
src/styles/: Home.module.css  globals.css
